--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,9 @@
         <button id="predict-btn">예측 하기</button>
         <div id="result"></div>
     </div>
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <script src="database.js"></script>
+    <script src="winRate.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
