Add pitcher profiles for Doosan Bears: 곽빈, 잭 로그, 최승용, 최원준, and 콜 어빈
- Added JSON files for five pitchers with their names, team affiliation, image URLs, and ERA statistics.

--- a/web/test.html
+++ b/web/test.html
@@ -177,7 +177,7 @@ SELECT * FROM public.kbo_team_stats WHERE team_idx = 7;
                     <option value="LG Twins">LG Twins</option>
                     <option value="Samsung Lions">Samsung Lions</option>
                     <option value="Lotte Giants">Lotte Giants</option>
-                    <option value="Dosan Bears">Dosan Bears</option>
+                    <option value="Doosan Bears">Doosan Bears</option>
                     <option value="KIA Tigers">KIA Tigers</option>
                     <option value="Hanwha Eagles">Hanwha Eagles</option>
                     <option value="NC Dinos" selected>NC Dinos</option>
