--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KBO 승률 예측기</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -73,8 +73,8 @@
     </div>
 
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-    <script src="database.js"></script>
-    <script src="winRate.js"></script>
-    <script src="app.js"></script>
+    <script src="js/database.js"></script>
+    <script src="js/winRate.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
